[SIT] Form: Fix highlight item when change config from 2s to 1s with z-index less z-index of modal other config.

--- a/apps/core/form/static/form/config/css/style.css
+++ b/apps/core/form/static/form/config/css/style.css
@@ -637,7 +637,7 @@
 
 /* highlight */
 .sortable-item-highlight {
-    z-index: 99999;
+    z-index: 1054;
     animation: sortableHighlight 1s;
 }
 
